# motor_insurance_risk

./: .gitignore  pyproject.toml
infra/db/: docker-compose.yml
motor_insurance_risk/: config.py
motor_insurance_risk/data_processor/: processor.py  run.py
motor_insurance_risk/database/: connection.py
motor_insurance_risk/embeddings/: generator.py  utils.py
motor_insurance_risk/risk_assessment/: assistant.py  processor.py
